--- a/1/index.html
+++ b/1/index.html
@@ -19,7 +19,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogla: С Новым Годом!</title>
+    <title>indian geogra: С Новым Годом!</title>
   </head>
 
   <body>
@@ -40,29 +40,29 @@
 
 
 	  <div id="nav">
-	    <li><a href="comics/1/index.html">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="comics/1/index.html" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="//c.xkcd.com/random/comic/">Куда-нибудь</a></li>
-	    <li><a rel="next" href="/2/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="index.html">&gt;&gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a rel="prev" href="indiangeogra.github.io/1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a href="http://indiangeogra.github.io/1">Куда-нибудь</a></li>
+	    <li><a rel="next" href="http://indiangeogra.github.io/2" accesskey="n">Сюда &gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	    <img src="comics/1/comic.png" title="Славься, славься, ты Новый год." alt="Счастливого Нового года" />
 	  </div>
 	  <div id="nav">
-	    <li><a href="comics/1/index.html">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="comics/1/index.html" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="//c.xkcd.com/random/comic/">Куда-нибудь</a></li>
-	    <li><a rel="next" href="/2/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="index.html">&gt;&gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a rel="prev" href="indiangeogra.github.io/1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a href="http://indiangeogra.github.io/1">Куда-нибудь</a></li>
+	    <li><a rel="next" href="http://indiangeogra.github.io/2" accesskey="n">Сюда &gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 
 	  <hr>
 
 	  <br />
 	  <center>
-	  Сослать в наш красный уголок: http://blablablah.github.io/comics/1/comic.html<br />
-	  Стянуть картинку: http://blablah.github.io/comics/1/comic.png
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/1/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/1/comic.png
 	  </center>
         
       </div>
