--- a/1/index.html
+++ b/1/index.html
@@ -47,7 +47,7 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="comics/1/comic.png" title="Славься, славься, ты Новый год." alt="Счастливого Нового года" />
+	    <img src="https://indiangeogra.github.io/1/comic.png" title="Славься, славься, ты Новый год." alt="Счастливого Нового года" />
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
