--- a/2/index.html
+++ b/2/index.html
@@ -11,15 +11,15 @@
       }
     </style>
     <!--<link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>-->
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="icon" href="favicon.png">
+    <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/print.css" media="print">
+    <link rel="icon" href="https://indiangeogra.github.io/favicon.png">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogla: Лети!</title>
+    <title>indian geogra: Окололетнее</title>
   </head>
 
   <body>
@@ -40,30 +40,29 @@
 
 
 	  <div id="nav">
-	    <li><a href="/1/">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="/1/" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="//c.xkcd.com/random/comic/">Куда-нибудь</a></li>
-	    <li><a rel="next" href="/2/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="/2/">&gt;&gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a rel="prev" href="indiangeogra.github.io/1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a rel="next" href="http://indiangeogra.github.io/2" accesskey="n">Сюда &gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="images/happy_new_year.png" title="Славься, славься, ты Новый год." alt="Счастливого Нового года" />
+	    <img src="https://indiangeogra.github.io/2/comic.png" title="Славься, славься, ты Новый год." alt="Окололетнее" />
 	  </div>
-
 	  <div id="nav">
-	    <li><a href="/1/">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="/1/" accesskey="p">&lt; Туда</a></li>
-	    <li><a href="//c.xkcd.com/random/comic/">Куда-нибудь</a></li>
-	    <li><a rel="next" href="/2/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="/2/">&gt;&gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a rel="prev" href="indiangeogra.github.io/1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a rel="next" href="http://indiangeogra.github.io/2" accesskey="n">Сюда &gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 
 	  <hr>
 
 	  <br />
 	  <center>
-	  Сослать в наш красный уголок: http://blablablah.github.io/1/comic.html<br />
-	  Стянуть картинку: http://blablah.github.io/1/1.png
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/2/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/2/comic.png
 	  </center>
         
       </div>
