--- a/1/index.html
+++ b/1/index.html
@@ -19,7 +19,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: С Новым Годом!</title>
+    <title>indian geogra: Счастливого Нового года</title>
   </head>
 
   <body>
