--- a/2/index.html
+++ b/2/index.html
@@ -35,7 +35,7 @@
 
 
           <div id="ComicTitle">
-	    Счастливого Нового года!
+	    Окололетнее
 	  </div>
 
 
@@ -47,7 +47,7 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/2/comic.png" title="Славься, славься, ты Новый год." alt="Окололетнее" />
+	    <img src="https://indiangeogra.github.io/2/comic.png" title="Всего каких-нибудь пять месяцев..." alt="Окололетнее" />
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
