--- a/1/index.html
+++ b/1/index.html
@@ -51,9 +51,9 @@
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="indiangeogra.github.io/1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a rel="prev" href="../1" accesskey="p">&lt; Tуда</a></li>
 	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="http://indiangeogra.github.io/2" accesskey="n">Сюда &gt;</a></li>
+	    <li><a rel="next" href="../2" accesskey="n">Сюда &gt;</a></li>
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 
