--- a/1/index.html
+++ b/1/index.html
@@ -42,7 +42,7 @@
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li>&lt; Tуда</li>
-	    <li><a href="http://indiangeogra.github.io/random.php">Куда-нибудь</a></li>
+	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a rel="next" href="../2" accesskey="n">Сюда &gt;</a></li>
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
@@ -52,7 +52,7 @@
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li>&lt; Tуда</li>
-	    <li><a href="http://indiangeogra.github.io/random.php">Куда-нибудь</a></li>
+	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a rel="next" href="../2" accesskey="n">Сюда &gt;</a></li>
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
