--- a/random.html
+++ b/random.html
@@ -8,15 +8,15 @@
 
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
+  <!--<meta charset="UTF-8">
   <meta http-equiv="refresh" content="1;url=http://indiangeogra.github.io">
   <script type="text/javascript">
     window.location.href = "http://indiangeogra.github.io"
-  </script>
+  </script>-->
   <title>Page Redirection</title>
 </head>
 <body>
   <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-  If you are not redirected automatically, follow <a href='http://indiangeogra.github.io/2/'>this link</a>
+  <!--If you are not redirected automatically, follow <a href='http://indiangeogra.github.io/2/'>this link</a>-->
 </body>
 </html>
