--- a/random.html
+++ b/random.html
@@ -2,8 +2,9 @@
 <?php
    $urls = array("http://indiangeogra.github.io/1", 
               "http://indiangeogra.github.io/2"); 
-   $url = $urls[array_rand($urls)]; 
-   header("Location: http://$url"); 
+   $url = $urls[array_rand($urls)];
+   echo $url;
+   //header("Location: http://$url"); 
    ?>
 
 <html lang="en-US">
