--- a/random.html
+++ b/random.html
@@ -16,6 +16,14 @@
   </script>-->
   <title>Page Redirection</title>
 </head>
+<body>
+   <?php
+   $urls = array("http://indiangeogra.github.io/1", 
+              "http://indiangeogra.github.io/2"); 
+   $url = $urls[array_rand($urls)];
+   echo $url;
+   ?>
+</body>
   <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
   <!--If you are not redirected automatically, follow <a href='http://indiangeogra.github.io/2/'>this link</a>-->
 </html>
