--- a/random.html
+++ b/random.html
@@ -3,7 +3,8 @@
 <html lang="en-US">
 <head>
    <script type="text/javascript">
-      var urls = new Array("http://usabilla.com/rate/A", "usabilla.com/rate/B");
+      var urls = new Array("http://indiangeogra.github.io/1", 
+                           "http://indiangeogra.github.io/2");
       window.location.href = urls[Math.floor(urls.length*Math.random())];
    </script>
    <title>Page Redirection</title>
