--- a/3/index.html
+++ b/3/index.html
@@ -19,7 +19,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Окололетнее</title>
+    <title>indian geogra: Ходячий замок Хаула</title>
   </head>
 
   <body>
@@ -35,23 +35,23 @@
 
 
           <div id="ComicTitle">
-	    Окололетнее
+	    Ходячий замок Хаула
 	  </div>
 
 
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/2/comic.png" title="Всего каких-нибудь пять месяцев..." alt="Окололетнее" />
+	    <img src="https://indiangeogra.github.io/2/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" />
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../1/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
 	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
@@ -61,8 +61,8 @@
 
 	  <br />
 	  <center>
-	  Сослать в наш красный уголок: http://indiangeogra.github.io/2/index.html<br />
-	  Стянуть картинку: http://indiangeogra.github.io/2/comic.png
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/3/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/3/comic.png
 	  </center>
         
       </div>
