--- a/index.html
+++ b/index.html
@@ -1,15 +1,71 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://indiangeogra.github.io/3/">
-        <script type="text/javascript">
-            window.location.href = "http://indiangeogra.github.io/3/"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow <a href='http://indiangeogra.github.io/13/'>this link</a>
-    </body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
+    <style>
+      body {
+        font-family: 'Forum', serif;
+        font-size: 48px;
+      }
+    </style>
+    <!--<link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>-->
+    <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/print.css" media="print">
+    <link rel="icon" href="https://indiangeogra.github.io/favicon.png">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="msapplication-TileImage" content="favicon.png">
+    <title>indian geogra: Ходячий замок Хаула</title>
+  </head>
+
+  <body>
+    <div id="container">
+      <div class="inner">
+
+        <header>
+          <h1>indian geogra</h1>
+          <h2>Фантазия для очевидца с оркестром</h2>
+        </header>
+
+        <section id="main_content">
+
+
+          <div id="ComicTitle">
+	    Ходячий замок Хаула
+	  </div>
+
+
+	  <div id="nav">
+	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
+	  </div>
+	  <div id="comic">
+	    <img src="https://indiangeogra.github.io/3/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" />
+	  </div>
+	  <div id="nav">
+	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
+	  </div>
+
+	  <hr>
+
+	  <br />
+	  <center>
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/3/index.html<br />
+	  Стянуть картинку: http://indiangeogra.github.io/3/comic.png
+	  </center>
+        
+      </div>
+    </div>
+  </body>
 </html>
