--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Ходячий замок Хаула</title>
+    <title><a href="http://indiangeogra.github.io">indian geogra: Ходячий замок Хаула</a></title>
   </head>
 
   <body>
