--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title><a href="http://indiangeogra.github.io">indian geogra: Ходячий замок Хаула</a></title>
+    <title></title>indian geogra: Ходячий замок Хаула</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <div class="inner">
 
         <header>
-          <h1>indian geogra</h1>
+          <a href="http://indiangeogra.github.io"><h1>indian geogra</h1></a>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
