--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="inner">
 
         <header>
-          <a href="http://indiangeogra.github.io"><h1>indian geogra</h1></a>
+          <h1><a href="http://indiangeogra.github.io">indian geogra</a></h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
