--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="inner">
 
         <header>
-          <h1 style="display:block;"><a style="color: #333; float: left;" href="http://indiangeogra.github.io">indian geogra</a></h1><br/>
+          <h1><a style="color: #333; float: left; display:block" href="http://indiangeogra.github.io">indian geogra</a></h1><br/>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
