--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
       <div class="inner">
 
         <header>
+        <div>
           <h1><a style="color: #333; float: left; display:block" href="http://indiangeogra.github.io">indian geogra</a></h1><br/>
+        </div>
+        <div>
           <h2>Фантазия для очевидца с оркестром</h2>
+        </div>
         </header>
 
         <section id="main_content">
