--- a/3/index.html
+++ b/3/index.html
@@ -28,7 +28,7 @@
 
         <header>
         <div>
-          <h1><a style="color: #333; float: left; display:block" href="http://indiangeogra.github.io">indian geogra</a></h1><br/>
+          <h1><a style="color: #333; text-align:left" href="http://indiangeogra.github.io">indian geogra</a></h1><br/>
         </div>
         <div>
           <h2>Фантазия для очевидца с оркестром</h2>
