--- a/3/index.html
+++ b/3/index.html
@@ -27,12 +27,9 @@
       <div class="inner">
 
         <header>
-        <div>
-          <h1><a style="color: #333; float:left; text-align: left;" href="http://indiangeogra.github.io">indian geogra</a></h1><br />
-        </div>
-        <div>
+          <a style="color: #333; float:left; text-align: left;" href="http://indiangeogra.github.io"><h1></h1>indian geogra</h1></a>
+          <br/>
           <h2>Фантазия для очевидца с оркестром</h2>
-        </div>
         </header>
 
         <section id="main_content">
