--- a/3/index.html
+++ b/3/index.html
@@ -27,8 +27,7 @@
       <div class="inner">
 
         <header>
-          <a style="color: #333; float:left; text-align: left;" href="http://indiangeogra.github.io"><h1></h1>indian geogra</h1></a>
-          <br/>
+          <h1></h1><a style="color: #333; anchor:left; text-align: left;" href="http://indiangeogra.github.io">indian geogra</a></h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
