--- a/3/index.html
+++ b/3/index.html
@@ -27,7 +27,7 @@
       <div class="inner">
 
         <header>
-          <h1></h1><a style="color: #333; anchor:left; text-align: left;" href="http://indiangeogra.github.io">indian geogra</a></h1>
+          <h1><a style="color: #333; font-size: 48px; font-weight: 900; line-height: 1.2; color: #303030; letter-spacing: -1px;" href="http://indiangeogra.github.io">indian geogra</a></h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
