--- a/3/index.html
+++ b/3/index.html
@@ -26,8 +26,8 @@
     <div id="container">
       <div class="inner">
 
-        <header>
-          <h1><a style="color: #333; font-size: 48px; font-weight: 900; line-height: 1.2; color: #303030; letter-spacing: -1px;" href="http://indiangeogra.github.io">indian geogra</a></h1>
+        <header style="text-align:left">
+          <h1><a style="color: #303030; text-align:left" href="http://indiangeogra.github.io">indian geogra</a></h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
