--- a/3/index.html
+++ b/3/index.html
@@ -26,8 +26,8 @@
     <div id="container">
       <div class="inner">
 
-        <header style="text-align:left">
-          <h1><a style="color: #303030; text-align:left" href="http://indiangeogra.github.io">indian geogra</a></h1>
+        <header>
+          <h1><a style="color: #303030; text-align:left; display:inline;" href="http://indiangeogra.github.io">indian geogra</a></h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
