--- a/3/index.html
+++ b/3/index.html
@@ -27,7 +27,12 @@
       <div class="inner">
 
         <header>
-          <h1><a style="color: #303030; text-align:left; display:inline;" href="http://indiangeogra.github.io">indian geogra</a></h1>
+          <h1><span 
+		class="pseudolink" 	
+   		onclick="location='http://indiangeogra.github.io'">
+          	indian geogra
+          	</span>
+          </h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
