--- a/3/index.html
+++ b/3/index.html
@@ -29,7 +29,8 @@
         <header>
           <h1><span 
 		class="pseudolink" 	
-   		onclick="location='http://indiangeogra.github.io'">
+   		onclick="location='http://indiangeogra.github.io'"
+   		onmouseover="" style="cursor: pointer;">
           	indian geogra
           	</span>
           </h1>
