--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       <div class="inner">
 
         <header>
-        <div>
-          <h1><a style="color: #333; float: left; display:block" href="http://indiangeogra.github.io">indian geogra</a></h1><br/>
-        </div>
-        <div>
+          <h1><span 
+		class="pseudolink" 	
+   		onclick="location='http://indiangeogra.github.io'"
+   		onmouseover="" style="cursor: pointer;">
+          	indian geogra
+          	</span>
+          </h1>
           <h2>Фантазия для очевидца с оркестром</h2>
-        </div>
         </header>
 
         <section id="main_content">
