--- a/1/index.html
+++ b/1/index.html
@@ -27,7 +27,13 @@
       <div class="inner">
 
         <header>
-          <h1>indian geogra</h1>
+          <h1><span 
+		class="pseudolink" 	
+   		onclick="location='http://indiangeogra.github.io'"
+   		onmouseover="" style="cursor: pointer;">
+          	indian geogra
+          	</span>
+          </h1>
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
