--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
+    <link rel="stylesheet" type="text/js" href="https://fonts.googleapis.com/css?family=Forum">
+
+    <script src="https://indiangeogra.github.io/javascripts/lazysizes.min.js" async=""></script>
+
     <style>
       body {
         font-family: 'Forum', serif;
@@ -53,7 +57,7 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/3/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" />
+	    <img src="https://indiangeogra.github.io/3/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
