Left/Right navigation shortcuts

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
     <title>indian geogra: Ходячий замок Хаула</title>
   </head>
 
+
   <body>
+    <script type="text/javascript" src='javascripts/shortcuts.js'></script>
+    <script type="text/javascript">
+      shortcut.add("Left",function() {
+      window.location.href = 'view.php?comic=2';
+      });
+      shortcut.add("Right",function() {
+      window.location.href = 'view.php?comic=3';
+      });
+    </script>
+
     <div id="container">
       <div class="inner">
 
