--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <script type="text/javascript" src='javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = 'view.php?comic=2';
+      window.location.href = '2';
       });
       shortcut.add("Right",function() {
-      window.location.href = 'view.php?comic=3';
+      window.location.href = '3';
       });
     </script>
 
