--- a/1/index.html
+++ b/1/index.html
@@ -23,6 +23,16 @@
   </head>
 
   <body>
+    <script type="text/javascript" src='javascripts/shortcuts.js'></script>
+    <script type="text/javascript">
+      shortcut.add("Left",function() {
+      window.location.href = '1';
+      });
+      shortcut.add("Right",function() {
+      window.location.href = '2';
+      });
+    </script>
+
     <div id="container">
       <div class="inner">
 
