--- a/3/index.html
+++ b/3/index.html
@@ -4,6 +4,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
+    <link rel="stylesheet" type="text/js" href="https://fonts.googleapis.com/css?family=Forum">
+
+    <script src="https://indiangeogra.github.io/javascripts/lazysizes.min.js" async=""></script>
+
     <style>
       body {
         font-family: 'Forum', serif;
@@ -22,7 +26,18 @@
     <title>indian geogra: Ходячий замок Хаула</title>
   </head>
 
+
   <body>
+    <script type="text/javascript" src='javascripts/shortcuts.js'></script>
+    <script type="text/javascript">
+      shortcut.add("Left",function() {
+      window.location.href = '2';
+      });
+      shortcut.add("Right",function() {
+      window.location.href = '3';
+      });
+    </script>
+
     <div id="container">
       <div class="inner">
 
@@ -53,7 +68,7 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/3/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" />
+	    <img src="https://indiangeogra.github.io/3/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
