--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/3/comic.png" title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
+		 data-src="https://indiangeogra.github.io/3/comic_small.png"
+		 class="lazyload blur-up"
+		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
