--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img style="width=100%;"
-	         src="https://indiangeogra.github.io/3/comic_lazy.png"
+	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
+		 width="100%"
 		 data-src="https://indiangeogra.github.io/3/comic_small.png"
 		 class="lazyload blur-up"
 		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
