--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="https://indiangeogra.github.io/stylesheets/print.css" media="print">
     <link rel="icon" href="https://indiangeogra.github.io/favicon.png">
+    <link  rel="stylesheet" href="https://indiangeogra.github.io/stylesheets/lightbox.css">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -74,6 +75,7 @@
 		 class="lazyload blur-up"
 		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	  </div>
+	  <a href="3/comic.png" data-lightbox="comic" data-title="My caption">Image #1</a>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
@@ -92,5 +94,7 @@
         
       </div>
     </div>
+
+    <script src="javascripts/lightbox-plus-jquery.js"></script>
   </body>
 </html>
