--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
 		 class="lazyload blur-up"
 		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	  </div>
-	  <a href="3/comic.png" data-lightbox="comic" data-title="My caption">Image #1</a>
+	  <a href="3/comic.png" data-lightbox="comic" data-title="My caption">
+	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
+		 width="100%"
+		 data-src="https://indiangeogra.github.io/3/comic_small.png"
+		 class="lazyload blur-up"
+		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+	  </a>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
