--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 	  <a href="3/comic.png" data-lightbox="comic" data-title="My caption">
 	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
 			 margin="0 auto;"
+			 display="block;"
 			 width="100%"
 			 data-src="https://indiangeogra.github.io/3/comic_small.png"
 			 class="lazyload blur-up"
