--- a/archive.html
+++ b/archive.html
@@ -29,81 +29,65 @@
 
 
   <body>
-    <script type="text/javascript" src='javascripts/shortcuts.js'></script>
-    <script type="text/javascript">
-      shortcut.add("Left",function() {
-      window.location.href = '2';
-      });
-      shortcut.add("Right",function() {
-      window.location.href = '3';
-      });
-    </script>
-
-
     <div id="container">
       <div class="inner">
 
-
         <header>
-          <h1><span 
+          <h1><a style="color: #303030; display:inline; padding: 0px 0px 0px 0px;"
+		 href="http://indiangeogra.github.io">
+          	indian geogra                             
+          	</a>
+          </h1>
+
+          <!--<h1><span 
 		class="pseudolink" 	
    		onclick="location='http://indiangeogra.github.io'"
    		onmouseover="" style="cursor: pointer;">
           	indian geogra
           	</span>
-          </h1>
+          </h1>-->
           <h2>Фантазия для очевидца с оркестром</h2>
         </header>
 
-
         <section id="main_content">
 
-
           <div id="ComicTitle">
-	    Ходячий замок Хаула
-	  </div>
-
-
-	  <div id="nav">
-	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
-	  </div>
-	  <div id="comic">
-	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
-	       href="3/comic.png">
-	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
-		 width="100%"
-		 data-src="https://indiangeogra.github.io/3/comic_small.png"
-		 class="lazyload blur-up"
-		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
-	    </a>
-	  </div>
-	  <div id="nav">
-	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
-	  </div>
-
-          <div id="ComicTitle">
-	  <a style="color: #6d6d6d;"
-	     href="http://indiangeogra.github.io">
 	    Архив
-	  </a>
 	  </div>
 
-	  <footer>
+
+	  <a style="display: inline;" 
+	     href="1/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
+	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
+			 width="40px;"
+			 margin="0 auto;"
+			 display="block;"
+			 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+	  </a>
+
+	  <a style="display: inline;" 
+	     href="2/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
+	    	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
+			 margin="0 auto;"
+			 display="block;"
+			 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+	  </a>
+
+	  <a style="display: inline;" 
+	     href="3/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
+	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
+			 width="140px;"
+			 margin="0 auto;"
+			 display="block;"
+			 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+	  </a>
+
+
+	  <hr>
 
 	  <br />
 	  <center>
-	  <div style="color: #333">
-	  Сослать в наш красный уголок: http://indiangeogra.github.io/3/index.html<br />
-	  Стянуть картинку: http://indiangeogra.github.io/3/comic.png
-	  </div>
+	  Сослать в наш красный уголок: http://indiangeogra.github.io/archive.html<br />
 	  </center>
         
       </div>
