--- a/1/index.html
+++ b/1/index.html
@@ -63,7 +63,15 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/1/comic.png" title="Славься, славься, ты Новый год." alt="Счастливого Нового года" />
+	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
+	       href="1/comic.png">
+	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
+		 width="100%"
+		 data-src="https://indiangeogra.github.io/1/comic_small.png"
+		 class="lazyload blur-up"
+		 title="Славься, славься, ты Новый год." alt="Счастливого Нового года"
+		 class="lazyload no-src" />
+	    </a>
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
