--- a/2/index.html
+++ b/2/index.html
@@ -63,7 +63,15 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
-	    <img src="https://indiangeogra.github.io/2/comic.png" title="Всего каких-нибудь пять месяцев..." alt="Окололетнее" />
+	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
+	       href="2/comic.png">
+	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
+		 width="100%"
+		 data-src="https://indiangeogra.github.io/2/comic_small.png"
+		 class="lazyload blur-up"
+		 title="Всего каких-нибудь пять месяцев..." alt="Окололетнее" 
+		 class="lazyload no-src" />
+	    </a>
 	  </div>
 	  <div id="nav">
 	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
