--- a/2/index.html
+++ b/2/index.html
@@ -81,7 +81,16 @@
 	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 
-	  <hr>
+	  <div id="ComicTitle">
+	  <a style="color: #6d6d6d;"
+	     href="http://indiangeogra.github.io/archive.html">
+	    Архив
+	  </a>
+	  </div>
+
+	  <footer>
+
+
 
 	  <br />
 	  <center>
