--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <div id="ComicTitle">
 	  <a style="color: #6d6d6d;"
-	     href="http://indiangeogra.github.io">
+	     href="http://indiangeogra.github.io/archive.html">
 	    Архив
 	  </a>
 	  </div>
