--- a/2/index.html
+++ b/2/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
+    <script src="https://indiangeogra.github.io/javascripts/lazysizes.min.js" async=""></script>
     <style>
       body {
         font-family: 'Forum', serif;
@@ -64,7 +65,7 @@
 	  </div>
 	  <div id="comic">
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
-	       href="2/comic.png">
+	       href="https://indiangeogra.github.io/2/comic.png">
 	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/2/comic_small.png"
