--- a/1/index.html
+++ b/1/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Forum">
+    <script src="https://indiangeogra.github.io/javascripts/lazysizes.min.js" async=""></script>
     <style>
       body {
         font-family: 'Forum', serif;
