--- a/archive.html
+++ b/archive.html
@@ -24,7 +24,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
-    <title>indian geogra: Ходячий замок Хаула</title>
+    <title>indian geogra: Архив</title>
   </head>
 
 
@@ -57,31 +57,33 @@
 
 
 	  <a style="display: inline;" 
-	     href="1/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
+	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
 			 margin="0 auto;"
 			 display="block;"
-			 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+			 title="Счастливого Нового года" alt="Счастливого Нового года" class="lazyload no-src" />
 	  </a>
 
 	  <a style="display: inline;" 
-	     href="2/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
+	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее">
 	    	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
 			 margin="0 auto;"
 			 width="140px;"
 			 display="block;"
-			 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+			 title="Окололетнее" alt="Окололетнее" class="lazyload no-src" />
 	  </a>
 
+          <!-- Начало новой ссылки -->
 	  <a style="display: inline;" 
 	     href="3/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
 	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
 			 width="140px;"
 			 margin="0 auto;"
 			 display="block;"
-			 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
+			 title="Ходячий замок Хаула" alt="Ходячий замок Хаула" class="lazyload no-src" />
 	  </a>
+          <!-- Kонец новой ссылки -->
 
 
 	  <hr>
