Debug lightbox arrows

--- a/archive.html
+++ b/archive.html
@@ -62,7 +62,7 @@
 			 width="140px;"
 			 margin="0 auto;"
 			 display="block;"
-			 title="Счастливого Нового года" alt="Счастливого Нового года" class="lazyload no-src" />
+			 title="Счастливого Нового года" alt="Счастливого Нового года" />
 	  </a>
 
 	  <a style="display: inline;" 
@@ -71,7 +71,7 @@
 			 margin="0 auto;"
 			 width="140px;"
 			 display="block;"
-			 title="Окололетнее" alt="Окололетнее" class="lazyload no-src" />
+			 title="Окололетнее" alt="Окололетнее" />
 	  </a>
 
           <!-- Начало новой ссылки -->
@@ -81,7 +81,7 @@
 			 width="140px;"
 			 margin="0 auto;"
 			 display="block;"
-			 title="Ходячий замок Хаула" alt="Ходячий замок Хаула" class="lazyload no-src" />
+			 title="Ходячий замок Хаула" alt="Ходячий замок Хаула" />
 	  </a>
           <!-- Kонец новой ссылки -->
 
