Sorting lightbox entries

--- a/archive.html
+++ b/archive.html
@@ -66,6 +66,24 @@
 	  </a>
 
 	  <a style="display: inline;" 
+	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года">
+	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
+			 width="140px;"
+			 margin="0 auto;"
+			 display="block;"
+			 title="Счастливого Нового года" alt="Счастливого Нового года" />
+	  </a>
+
+	  <a style="display: inline;" 
+	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года">
+	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
+			 width="140px;"
+			 margin="0 auto;"
+			 display="block;"
+			 title="Счастливого Нового года" alt="Счастливого Нового года" />
+	  </a>
+
+	  <a style="display: inline;" 
 	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее">
 	    	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
 			 margin="0 auto;"
