--- a/archive.html
+++ b/archive.html
@@ -57,7 +57,8 @@
 
 
 	  <a style="display: inline;" 
-	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года">
+	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года"
+	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
 			 margin="0 auto;"
@@ -66,7 +67,8 @@
 	  </a>
 
 	  <a style="display: inline;" 
-	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года">
+	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года"
+	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
 			 margin="0 auto;"
@@ -75,7 +77,8 @@
 	  </a>
 
 	  <a style="display: inline;" 
-	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года">
+	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года"
+	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 			 width="140px;"
 			 margin="0 auto;"
@@ -84,7 +87,8 @@
 	  </a>
 
 	  <a style="display: inline;" 
-	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее">
+	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее"
+	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
 			 margin="0 auto;"
 			 width="140px;"
@@ -94,7 +98,8 @@
 
           <!-- Начало новой ссылки -->
 	  <a style="display: inline;" 
-	     href="3/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула">
+	     href="3/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула"
+	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
 			 width="140px;"
 			 margin="0 auto;"
