--- a/archive.html
+++ b/archive.html
@@ -56,6 +56,10 @@
 	  </div>
 
 
+	  <a href="1/comic.png" data-lightbox="roadtrip">Image #2</a>
+	  <a href="2/comic.png" data-lightbox="roadtrip">Image #3</a>
+	  <a href="3/comic.png" data-lightbox="roadtrip">Image #4</a>
+
 	  <a style="display: inline;" 
 	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года"
 	     rel="lightbox[comic]">
