Nah, didnt work

--- a/archive.html
+++ b/archive.html
@@ -55,7 +55,7 @@
 	    Архив
 	  </div>
 
-	  <a style="display: inline;" 
+	  <a style="display: inline; padding: 0px 0px 0px 0px;"  
 	     href="1/comic.png" data-lightbox="comic" data-title="Счастливого Нового года"
 	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
@@ -63,7 +63,7 @@
 			 title="Счастливого Нового года" alt="Счастливого Нового года" />
 	  </a>
 
-	  <a style="display: inline;" 
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="2/comic.png" data-lightbox="comic" data-title="Окололетнее"
 	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/2/comic_lazy.png"
@@ -72,7 +72,7 @@
 	  </a>
 
           <!-- Начало новой ссылки -->
-	  <a style="display: inline;" 
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
 	     href="3/comic.png" data-lightbox="comic" data-title="Ходячий замок Хаула"
 	     rel="lightbox[comic]">
 	    	    <img src="https://indiangeogra.github.io/3/comic_lazy.png"
