--- a/1/index.html
+++ b/1/index.html
@@ -65,7 +65,7 @@
 	  </div>
 	  <div id="comic">
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
-	       href="1/comic.png">
+	       href="https://indiangeogra.github.io/1/comic.png">
 	    <img src="https://indiangeogra.github.io/1/comic_lazy.png"
 		 width="100%"
 		 data-src="https://indiangeogra.github.io/1/comic_small.png"
