--- a/2/index.html
+++ b/2/index.html
@@ -27,10 +27,10 @@
     <script type="text/javascript" src='javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = '1';
+      window.location.href = '../1';
       });
       shortcut.add("Right",function() {
-      window.location.href = '3';
+      window.location.href = '../3';
       });
     </script>
 
