--- a/1/index.html
+++ b/1/index.html
@@ -27,10 +27,10 @@
     <script type="text/javascript" src='javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
-      window.location.href = '../1';
+      window.location.href = 'http://indiangeogra.github.io/1';
       });
       shortcut.add("Right",function() {
-      window.location.href = '../2';
+      window.location.href = 'http://indiangeogra.github.io/2';
       });
     </script>
 
