--- a/1/index.html
+++ b/1/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <script type="text/javascript" src='javascripts/shortcuts.js'></script>
+    <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
       window.location.href = 'http://indiangeogra.github.io/1';
