--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
   <body>
-    <script type="text/javascript" src='javascripts/shortcuts.js'></script>
+    <script type="text/javascript" src='http://indiangeogra.github.io/javascripts/shortcuts.js'></script>
     <script type="text/javascript">
       shortcut.add("Left",function() {
       window.location.href = 'http://indiangeogra.github.io/2';
