--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
 
 	  <div id="nav">
-	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
