--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	    </a>
 	  </div>
-	  <div id="nav">
+	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
