--- a/1/index.html
+++ b/1/index.html
@@ -73,12 +73,12 @@
 		 class="lazyload no-src" />
 	    </a>
 	  </div>
-	  <div id="nav">
-	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li>&lt; Tуда</li>
-	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="../2" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
+	  <div id="nav" style="padding: 12px 8px 12px 8px;">
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li "padding: 12px 8px 12px 8px;"> &lt; Tуда </li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../2/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 
           <div id="ComicTitle">
