--- a/3/index.html
+++ b/3/index.html
@@ -63,12 +63,12 @@
 	  </div>
 
 
-	  <div id="nav">
-	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
+	  <div id="nav" style="padding: 12px 8px 12px 8px;">
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 	  <div id="comic">
 	    <a style="color: #303030; padding: 0px 0px 0px 0px;"
@@ -80,12 +80,12 @@
 		 title="Горячей воды нет и не будет." alt="Ходячий замок Хаула" class="lazyload no-src" />
 	    </a>
 	  </div>
-	  <div id="nav">
-	    <li><a href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
-	    <li><a rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
-	    <li><a href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
-	    <li><a rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
-	    <li><a href="http://indiangeogra.github.io">&gt;&gt;</a></li>
+	  <div id="nav" style="padding: 12px 8px 12px 8px;">
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../2/" accesskey="p">&lt; Tуда</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/random.html">Куда-нибудь</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
+	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
 
           <div id="ComicTitle">
