--- a/random.html
+++ b/random.html
@@ -11,6 +11,7 @@
    <title>Page Redirection</title>
 </head>
 <body>
+<?php include_once("analyticstracking.php") ?>
    Something went wrong... Sorry!
 </body>
 </html>
