--- a/3/index.html
+++ b/3/index.html
@@ -34,11 +34,19 @@
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
     <title>indian geogra: Ходячий замок Хаула</title>
+    
+    <script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  	ga('create', 'UA-73773751-1', 'auto');
+  	ga('send', 'pageview');
+    </script>
   </head>
 
 
   <body>
-
     <div id="container">
       <div class="inner">
 
@@ -87,6 +95,8 @@
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="next" href="../3/" accesskey="n">Сюда &gt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io">&gt;&gt;</a></li>
 	  </div>
+	  <br />
+	  <br />
 
           <div id="ComicTitle">
 	  <a style="color: #6d6d6d;"
