--- a/2/index.html
+++ b/2/index.html
@@ -21,6 +21,14 @@
     <![endif]-->
     <meta name="msapplication-TileImage" content="favicon.png">
     <title>indian geogra: Окололетнее</title>
+    <script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  	ga('create', 'UA-73773751-1', 'auto');
+  	ga('send', 'pageview');
+    </script>
   </head>
 
   <body>
@@ -56,6 +64,12 @@
 	  </div>
 
 
+
+
+
+
+
+
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../1/" accesskey="p">&lt; Tуда</a></li>
@@ -74,6 +88,7 @@
 		 class="lazyload no-src" />
 	    </a>
 	  </div>
+	  
 	  <div id="nav" style="padding: 12px 8px 12px 8px;">
 	    <li><a style="padding: 12px 8px 12px 8px;" href="http://indiangeogra.github.io/1">&lt;&lt;</a></li>
 	    <li><a style="padding: 12px 8px 12px 8px;" rel="prev" href="../1/" accesskey="p">&lt; Tуда</a></li>
