--- a/archive.html
+++ b/archive.html
@@ -91,6 +91,16 @@
 	  </a>
           <!-- Kонец новой ссылки -->
 
+		   <!-- Начало новой ссылки -->
+	  <a style="display: inline; padding: 0px 0px 0px 0px;" 
+	     href="4/comic.png" data-lightbox="comic" data-title="А."
+	     rel="lightbox[comic]">
+	    	    <img src="https://indiangeogra.github.io/4/comic_lazy.png"
+			 width="140px;"
+			 title="А." alt="А." />
+	  </a>
+          <!-- Kонец новой ссылки -->
+
 
 	  <hr>
 
